fix text-align

--- a/ci/static/css/ci/chat.css
+++ b/ci/static/css/ci/chat.css
@@ -124,7 +124,7 @@ html, body {
     margin-top: 5px;
     margin-left: auto;
     margin-right: 5px;
-    text-align: left;
+    text-align: right;
     word-break: break-all;
 }
 
